# jasshaus-rs

./: .gitignore
comm/: Cargo.toml
comm/src/: lib.rs  socket_message.rs  voting.rs
game/: Cargo.toml
game/src/: card.rs  lib.rs  playtype.rs  setting.rs
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
server/src/: log.rs  main.rs
server/src/room/: client.rs  mod.rs
traits/: Cargo.toml
traits/src/: lib.rs
web/: Cargo.toml  Makefile  game.html  game2.html  index.html  settings.html
web/locales/: de.yml  en.yml
web/src/: default.rs  home.rs  lib.rs  pages.rs  utils.rs
web/src/game/: hand.rs  mod.rs  player.rs  voting.rs  ws.rs
web/src/game/comm/: chat.rs  mod.rs  player.rs  rtc.rs
web/src/game/gameplay/: carpet.rs  game_details.rs  mod.rs  round_details.rs  show.rs
web/src/game/window/: announce.rs  end.rs  info.rs  mate.rs  mod.rs  round_summary.rs  start.rs
web/src/settings/: mod.rs
web/styles/: game.css  index.css  window.css
