[package]
name = "jasshaus-game"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5.1"
serde_with = "1.0"
