[package]
name = "jasshaus-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# proc-macro = true

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"

js-sys = "0.3.64"
gloo = { version = "0.9.0", features = ["console", "events", "net"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde = "1.0.181"
serde_json = "1.0.104"
rust-i18n = "2.1.0"

jasshaus-game = { path = "../game" }
jasshaus-comm = { path = "../comm" }
jasshaus-macros = { path = "../macros" }
jasshaus-traits = { path = "../traits" }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcIceCandidate",
    "RtcPeerConnectionIceEvent",
    "MessageEvent",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcPeerConnectionState",
    "MediaStream",
    "MediaDevices",
    "MediaStreamConstraints",
    "Navigator",
    "RtcIceCandidateInit",
    "RtcRtpSender",
    "MediaStreamTrack",
    "HtmlMediaElement",
    "RtcTrackEvent",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "HtmlInputElement",
    "RtcRtpSender",
    "AudioContext",
    "AudioBuffer",
    "MediaStreamAudioDestinationNode",

    "WebSocket",
    "MessageEvent",
    "MouseEvent",
    "EventTarget",
    "HtmlSelectElement",
]

[profile.release]
#lto = true
#opt-level = 's'
#codegen-units = 1
#panic = 'abort'
